Updated the German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-03-17 12:52-0400\n"
-"PO-Revision-Date: 2012-08-05 13:40+0200\n"
+"PO-Revision-Date: 2012-08-06 10:00+0200\n"
 "Last-Translator: Torben Undiwill <>\n"
 "Language-Team: none\n"
 "Language: de\n"
@@ -30,8 +30,6 @@ msgid ""
 "As once foretold,\n"
 "saved all life in this world.</i>"
 msgstr ""
-"<span color='#BCB088' size='large'In Unbekannte Lande</span>\n"
-"\n"
 "<i>So höhret\n"
 "Fremde im verlass'nen Land\n"
 "Diese Geschicht' uralter Länder.\n"
@@ -387,7 +385,7 @@ msgid ""
 "The elemental unit can turn into other elemental\n"
 "(use right-click on the unit to activate)"
 msgstr ""
-"Die Ahnen waren stets von den Elementargeistern fasziniert - Wesen aus "
+"Die Ahnen waren stets von den Elementargeistern fasziniert — Wesen aus "
 "reiner Energie. Sie träumten auch davon, eine Kreatur zu schaffen, welche "
 "alle vier bekannten Elemente vereint. Leider scheiterten sie. Am Ende wurde "
 "nu ein einzigartiges Amulett erschaffen, welches ein Element in ein anderes "
@@ -483,11 +481,11 @@ msgid ""
 "are called Summoners."
 msgstr ""
 "Vor langer Zeit, als unsere Ahnen an den Rändern der Wüste lebten, machten "
-"sie eine sehr mächtige Entdeckung - Magie. Verborgen in der Gestalt von "
+"sie eine sehr mächtige Entdeckung — Magie. Verborgen in der Gestalt von "
 "Zauberformeln und Symbolen beherrschte Magie unser Schicksal.\n"
-" Die Ahnen entdeckten den Abgrund - eine andere Welt voller Energie, in der "
+" Die Ahnen entdeckten den Abgrund — eine andere Welt voller Energie, in der "
 "Raum und Zeit bedeutungslos sind. Alle uns bekannte Magie stammt aus dem "
-"Abgrund. Wir beschwören diese Macht in diese Welt - und das ist der Grund, "
+"Abgrund. Wir beschwören diese Macht in diese Welt — und das ist der Grund, "
 "warum man uns Beschwörer nennt."
 
 #. [part]
@@ -501,10 +499,10 @@ msgid ""
 "The ancestors managed to communicate with Nomolas, who turned out to be "
 "obedient like all summoned magical entities."
 msgstr ""
-"Anfangs glaubten die Ahnen, der Abgrund sei ein Ort des primitiven Chaos - "
+"Anfangs glaubten die Ahnen, der Abgrund sei ein Ort des primitiven Chaos — "
 "bis sie das erste magische Geschöpf beschworen, ein wirklicher Bewohner "
 "dieser anderen Welt. Es war Nomolas, der erste Djinn.\n"
-"Nicht durch Fantasie gebunden, ist dieses Wesen das Mächstigste, was wir bis "
+"Nicht durch Fantasie gebunden, ist dieses Wesen das Mächtigste, was wir bis "
 "zum heutigen Tage kennen. Theoretisch ist Nomolas fähig, selbst einen Gott "
 "zu vernichten.\n"
 "Die Ahnen konnten mit Nomolas kommunizieren, der sich wie alle beschworenen "
@@ -754,7 +752,7 @@ msgid ""
 msgstr ""
 "Sechs Monate sind vergangen. Der Kreis hat das Gebiet von Sud-Affar "
 "verlassen und Arbeiter aus Tab-Tabar begannen, die Erbauung fortzuführen. "
-"Eine andere Arbeitsphase begann - die Städte der Triade wurden miteinander "
+"Eine andere Arbeitsphase begann — die Städte der Triade wurden miteinander "
 "verbunden, indem ein riesiges Dreieck erbaut wird. Derweil musste Mehir als "
 "neuer Kommandant nicht mehr die Arbeiter unterstützen wie früher, als er "
 "Sharifs Assistent war. Stattdessen verbesserte er seine Fähigkeiten, indem "
@@ -780,10 +778,10 @@ msgid ""
 "necessary, rescue—the leader and his army."
 msgstr ""
 "Tashkar, der Leiter von Tab-Tabar, wurde vermisst. Er war mit Soldaten nach "
-"Ka-Gatta aufgebrochen - der ersten, inzwischen aufgegebenen Hauptstadt der "
+"Ka-Gatta aufgebrochen — der ersten, inzwischen aufgegebenen Hauptstadt der "
 "Beschwörer. Niemand wusste, wieso er aufgebrochen war, wusste niemand. Sein "
 "Stellvertreter hätte hier helfen können, doch auch er war verschwunden. Der "
-"Hohe Rat befahl Mehit, den Leiter und seine Armee zu finden- und. wenn "
+"Hohe Rat befahl Mehit, den Leiter und seine Armee zu finden — und, wenn "
 "nötig, zu retten."
 
 #. [part]
@@ -893,7 +891,7 @@ msgid ""
 msgstr ""
 "Der Bau des Großen Kreises ging weiter. Er wurde mit dem Portal in Tab-Tabar "
 "verbunden, und drei Monate später erreichte es wieder den Ort, an dem er "
-"begann - in Mag-Magar. Eine neue Bauphase begann: Die Städte der Dreiheit "
+"begann — in Mag-Magar. Eine neue Bauphase begann: Die Städte der Dreiheit "
 "mussten mit al-Kamija verbunden werden. Auch mussten neue kleinere gezogen "
 "werden. Dank der tausenden von Arbeitern aus der Hauptstadt ging der Bau "
 "diesmal schneller voran.\n"
@@ -930,7 +928,7 @@ msgid ""
 "find out who he was and what he wanted."
 msgstr ""
 "Der Zustand des Fremden war kritisch. Er hatte zur Verwunderung aller kein "
-"Wasser bei sich. Eines war sicher - der Fremde kam nicht aus al-Kamija, wie "
+"Wasser bei sich. Eines war sicher — der Fremde kam nicht aus al-Kamija, wie "
 "seine exotische Kleidung bewies. In Tab-Tabar wurde der Neuankömmling zur "
 "Versorgung in ein Hospital verlegt, Alle warteten darauf, dass er erwachte, "
 "sodass sie herausfinden konnten, wer er war und was er wollte."
@@ -1860,7 +1858,7 @@ msgid ""
 "Let me guess: this is the lamp where Nomolas rests — the first jinn, creator "
 "of your palace-city, isn’t it?"
 msgstr ""
-"Lasst mich raten: dies ist die Lampe, in der Nomolas ruht - der erste "
+"Lasst mich raten: dies ist die Lampe, in der Nomolas ruht — der erste "
 "Dschinn, Erbauer eurer Palaststadt, nicht wahr?"
 
 #. [message]: speaker=Elder
@@ -1901,7 +1899,7 @@ msgid ""
 "This is Nomolas — the first jinn, the one who does not know the limits of "
 "human imagination."
 msgstr ""
-"Dies ist Nomolas - der erste Dschinn, der die Begrenzung der menschlichen "
+"Dies ist Nomolas — der erste Dschinn, der die Begrenzung der menschlichen "
 "Vorstellungskraft nicht kennt."
 
 #. [message]: speaker=Elder
@@ -2207,7 +2205,7 @@ msgstr ""
 #: To_Lands_Unknown/scenarios/03_East_of_Sud-Affar.cfg:289
 msgid "The only scroll I have summons a Fire Elemental. Let’s try."
 msgstr ""
-"Meine einzige Schriftrolle beschwört einen Feuergeist. Versuchen wir's."
+"Meine einzige Schriftrolle beschwört einen Feuergeist. Versuchen wir es."
 
 #. [message]: speaker=Rhaxiz
 #: To_Lands_Unknown/scenarios/03_East_of_Sud-Affar.cfg:302
@@ -2308,7 +2306,7 @@ msgid ""
 "No, wait — we are still under attack! Continue defending — now we can stop "
 "them."
 msgstr ""
-"Nein, wartet - wir werden immer noch angegriffen! Verteidigt weiter - Nun "
+"Nein, wartet — wir werden immer noch angegriffen! Verteidigt weiter — Nun "
 "können wir sie aufhalten."
 
 #. [message]: speaker=Mehir
@@ -2343,7 +2341,7 @@ msgid ""
 "elementals for the time being."
 msgstr ""
 "Schickt jemanden in die Stadt. Wir brauche Sägen und Macheten. Feuergeister "
-"können wir für's erste vergessen."
+"können wir fürs Erste vergessen."
 
 #. [message]: speaker=Rhaxiz
 #: To_Lands_Unknown/scenarios/03_East_of_Sud-Affar.cfg:695
@@ -2937,7 +2935,7 @@ msgid ""
 msgstr ""
 "Allerdings, das ist nicht der Dschungel- es ist an der Zeit, Feuergeister "
 "einzusetzen. Wir müssen aber erst diese Brücke überqueren, sonst verbrennt "
-"sie und wir werden nicht heimkehren können. Wir müssen uns zudem beeilen - "
+"sie und wir werden nicht heimkehren können. Wir müssen uns zudem beeilen — "
 "die Echsen überleben die Nacht in dieser gefährlichen Umgebung womöglich "
 "nicht."
 
@@ -2961,7 +2959,7 @@ msgid ""
 "Quick! We must seize this post — I will be able to summon our Elementals "
 "from there."
 msgstr ""
-"Schnell! Wir müssen diesen Posten einnehmen - Ich werde von dort aus unsere "
+"Schnell! Wir müssen diesen Posten einnehmen — Ich werde von dort aus unsere "
 "Geister beschwören können."
 
 #. [message]: speaker=Mehir
@@ -3848,10 +3846,10 @@ msgid ""
 "The elemental unit can turn into another elemental\n"
 "(use right-click on the unit to activate)"
 msgstr ""
-"Die Ahnen waren stets von den Elementargeistern fasziniert - Wesen aus "
+"Die Ahnen waren stets von den Elementargeistern fasziniert — Wesen aus "
 "reiner Energie. Sie träumten auch davon, eine Kreatur zu schaffen, welche "
 "alle vier bekannten Elemente vereint. Leider scheiterten sie. Am Ende wurde "
-"nu ein einzigartiges Amulett erschaffen, welches ein Element in ein anderes "
+"nur ein einzigartiges Amulett erschaffen, welches ein Element in ein anderes "
 "verwandeln konnte. Dies ist eines der mächtigsten Relikte der Ahnen.\n"
 "Dieser Elementargeist kann sich in andere verwandeln (über das Rechtsklick-"
 "Menü)"
@@ -4263,7 +4261,7 @@ msgstr ""
 #. [message]: speaker=Mehir
 #: To_Lands_Unknown/scenarios/09_Chaos.cfg:310
 msgid "Run, Rashti, run. Without you we won’t make it!"
-msgstr "Lauf, Rashti, lauf. Ohne dich schaffen wir's nicht!"
+msgstr "Lauf, Rashti, lauf. Ohne dich schaffen wir es nicht!"
 
 #. [message]: speaker=Aerius
 #: To_Lands_Unknown/scenarios/09_Chaos.cfg:342
@@ -6433,7 +6431,7 @@ msgid ""
 "Anthi’s bodyguard*) need to walk with you? Couldn’t we be alone for a "
 "moment?... He distracts me."
 msgstr ""
-"Toll, aber muss diese »Sonnenblume (*Mehir spricht ironisch über Kirios, "
+"Toll, aber muss diese »Sonnenblume« (*Mehir spricht ironisch über Kirios, "
 "Anthis Leibwächter*) mitkommen? können wir nicht einen Moment alleine "
 "sein?... Er lenkt mich ab."
 
@@ -7272,8 +7270,7 @@ msgstr ""
 #: To_Lands_Unknown/scenarios/19_Sun_Dome.cfg:149
 msgid "It’s me, Mehir. I have defended your capital, don’t you recognize me?"
 msgstr ""
-"Ich bin's, Mehir. Ich habe eure Hauptstadt verteidigt, erkennt ihr mich "
-"nicht?"
+"Ich bin Mehir. Ich habe eure Hauptstadt verteidigt, erkennt ihr mich nicht?"
 
 #. [message]: type=I8 Kharos_SunGoldenwarrior
 #: To_Lands_Unknown/scenarios/19_Sun_Dome.cfg:153
