--- a/po/ang.po
+++ b/po/ang.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-17 12:52-0400\n"
 "PO-Revision-Date: 2011-02-27 17:20+0100\n"
 "Last-Translator: Automatically generated\n"
