--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-17 12:52-0400\n"
 "PO-Revision-Date: 2012-08-06 10:00+0200\n"
 "Last-Translator: Torben Undiwill <>\n"
