--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: branch 1.10\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-17 12:52-0400\n"
 "PO-Revision-Date: 2012-02-26 17:25+0100\n"
 "Last-Translator: Automatically generated\n"
