--- a/po/pl.po
+++ b/po/pl.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
-"Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-03-17 12:52-0400\n"
 "PO-Revision-Date: 2011-08-09 10:53+0100\n"
 "Last-Translator: Łukasz Wawrowski <inferno-8@wp.pl>\n"
