--- a/po/ang@latin.po
+++ b/po/ang@latin.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: To_Lands_Unknown-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:05-0400\n"
 "PO-Revision-Date: 2011-02-27 17:20+0100\n"
