--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@
 # Torben Undiwill, 2012.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: To_Lands_Unknown-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:05-0400\n"
 "PO-Revision-Date: 2012-08-06 10:00+0200\n"
