--- a/po/fr.po
+++ b/po/fr.po
@@ -2,7 +2,7 @@
 # Guillaume Pascal <guillaume.pascal43@laposte.net>, 2011.
 msgid ""
 msgstr ""
-"Project-Id-Version: wescamp-i 18n\n"
+"Project-Id-Version: To_Lands_Unknown-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:05-0400\n"
 "PO-Revision-Date: 2011-12-24 18:44+0200\n"
