--- a/po/uk.po
+++ b/po/uk.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: branch 1.10\n"
+"Project-Id-Version: To_Lands_Unknown-1.10\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-04 21:05-0400\n"
 "PO-Revision-Date: 2012-02-22 00:19+0100\n"
